<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/id_user_name"
            android:hint="Username"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/id_password"
            android:hint="Password"
            android:text=""
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatButton
            android:text="Login"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/id_btn_login"
            />

    </LinearLayout>

</RelativeLayout>